--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,26 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
+  vault:
+    image: hashicorp/vault:1.16
+    container_name: vault_dev_local
+    ports:
+      - "8200:8200"
+    environment:
+      VAULT_DEV_ROOT_TOKEN_ID: root
+      VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
+    cap_add:
+      - IPC_LOCK  # prevent Vault from swapping to disk
+    command: vault server -dev -dev-root-token-id=root -dev-listen-address=0.0.0.0:8200
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "wget --quiet --spider http://127.0.0.1:8200/v1/sys/health || exit 1",
+        ]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
 volumes:
   pgdata:
-
